--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -1,12 +1,26 @@
+decorator==4.2.1
 Django==1.11
+django-w2ui==0.1
 docutils==0.14
+ipython==6.2.1
+ipython-genutils==0.2.0
+jedi==0.11.1
 pandoc==1.0.2
+parso==0.1.1
 pdfrw==0.4
+pexpect==4.4.0
+pickleshare==0.7.4
 Pillow==5.0.0
 ply==3.10
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 Pygments==2.2.0
 pytz==2017.3
 reportlab==3.4.0
 ## FIXME: could not find svn URL in dependency_links for this package:
 rst2pdf===0.93.dev-r0
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
 uWSGI==2.0.15
+wcwidth==0.1.7
