--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -1,26 +1,21 @@
-decorator==4.2.1
-Django==1.11
-django-w2ui==0.1
-docutils==0.14
-ipython==6.2.1
+backcall==0.1.0
+decorator==4.4.0
+Django==2.1.7
+django-ckeditor==5.6.1
+django-js-asset==1.2.2
+easy-thumbnails==2.6
+ipython==7.3.0
 ipython-genutils==0.2.0
-jedi==0.11.1
-pandoc==1.0.2
-parso==0.1.1
-pdfrw==0.4
-pexpect==4.4.0
-pickleshare==0.7.4
-Pillow==5.0.0
-ply==3.10
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-Pygments==2.2.0
-pytz==2017.3
-reportlab==3.4.0
-## FIXME: could not find svn URL in dependency_links for this package:
-rst2pdf===0.93.dev-r0
-simplegeneric==0.8.1
-six==1.11.0
+jedi==0.13.3
+parso==0.3.4
+peewee==3.9.2
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.4.1
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+Pygments==2.3.1
+pytz==2018.9
+six==1.12.0
 traitlets==4.3.2
-uWSGI==2.0.15
 wcwidth==0.1.7
