--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -1,22 +1,10 @@
-backcall==0.1.0
-decorator==4.4.0
-Django==2.1.7
-django-ckeditor==5.6.1
+asgiref==3.2.10
+Django==3.0.8
+django-ckeditor==5.9.0
 django-js-asset==1.2.2
-easy-thumbnails==2.6
-ipython==7.3.0
-ipython-genutils==0.2.0
-jedi==0.13.3
-parso==0.3.4
-peewee==3.9.2
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.4.1
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-Pygments==2.3.1
-pytz==2018.9
-six==1.12.0
-traitlets==4.3.2
-uWSGI==2.0.18
-wcwidth==0.1.7
+easy-thumbnails==2.7
+peewee==3.13.3
+Pillow==7.2.0
+pkg-resources==0.0.0
+pytz==2020.1
+sqlparse==0.3.1
