--- a/masks/static/bootstrap-duallistbox-master/package.json
+++ b/masks/static/bootstrap-duallistbox-master/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "bootstrap4-duallistbox",
-  "title": "Bootstrap 4 Duallistbox",
+  "name": "bootstrap-duallistbox",
+  "title": "Bootstrap Duallistbox",
   "description": "A responsive dual listbox widget optimized for Twitter Bootstrap. It works on all modern browsers and on touch devices.",
   "author": {
     "name": "István Ujj-Mészáros",
     "url": "https://github.com/istvan-ujjmeszaros"
   },
-  "main": "dist/jquery.bootstrap-duallistbox.js",
-  "style": "dist/bootstrap-duallistbox.min.css",
-  "license": "Apache-2.0",
+  "contributors": [],
   "repository": {
     "type": "git",
-    "url": "http://github.com/istvan-ujjmeszaros/bootstrap-duallistbox.git"
+    "url": "https://github.com/istvan-ujjmeszaros/bootstrap-duallistbox.git"
   },
   "homepage": "https://www.virtuosoft.eu/code/bootstrap-duallistbox/",
-  "version": "4.0.1",
+  "version": "3.0.9",
   "devDependencies": {
-    "grunt": "^1.0.2",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-jshint": "^1.1.0",
+    "grunt": "^1.1.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-cssmin": "^2.2.1"
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-cssmin": "^3.0.0"
   },
   "scripts": {
     "test": "grunt travis --verbose"
